# obweb

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  dao.js  debug.sh  docker-compose.yml  index.html  package-lock.json  package.json  rss.js  run.sh  server.js  update.js  utils.js
.github/workflows/: node.yml  rust.yml
__tests__/: config.yml  routes.test.js  test_api.js  test_rss.js
backend/: .gitignore  bot.js  bot.mjs  dao.js  package-lock.json  package.json  rss.js  server.js  update.js  utils.js
backend/__tests__/: test_api.js  test_rss.js
backend/__tests__/ob_test/Unsort/: new_post.md
backend/config/: default.json  test.json
config/: default.json  test.json
db/: feeds
front/: package-lock.json  package.json  rollup.config.js
front/public/: global.css  index.html  powershell.min.js
front/src/: App.svelte  Day.svelte  Footer.svelte  Index.svelte  Login.svelte  Nav.svelte  Page.svelte  main.js
js/: app.js
rss-reader/: .gitignore  Cargo.toml  run.sh
rss-reader/db/: config
rss-reader/src/: main.rs
src/: auth.rs  db.rs  git.rs  lib.rs  main.rs  rss.rs
static/: daily.html  index.html  rand.html  search.html  todo.html
static/js/: app.js  base.js  daily.js  hilitor.js  rand.js  search.js  todo.js
static/style/: app.css  tagsinput.css  todo.css
style/: app.css
