[package]
name = "ob-web"
version = "0.1.0"
authors = ["yukang <moorekang@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1.0"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
log = "0.4.1"
httparse = "1.3.4"
http = "0.2.0"
twoway = "0.2.1"
tokio-util = { version = "0.6", optional = true, features= ["codec"] }
thiserror = "1.0"
warp = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.12", features = ["derive"] }
chrono = "0.4"
base64 = "0.13.0"
rand = "0.7.2"
rust-argon2 = "0.6.0"
glob = "0.3.0"
uuid = { version = "0.8", features = ["v4"] }
dialoguer = "0.9.0"
clap = "3.0.0-beta.5"
path-clean = "0.1.0"
feed-rs = "1.0"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
scraper = "0.12.0"


[lib]
name = "base"
path = "src/lib.rs"

[[bin]]
name = "ob-web"

[[bin]]
name = "rss-reader"
