[package]
name = "rss-reader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "1.0"
chrono = "0.4"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde = "1.0.130"
serde_json = "1.0"
scraper = "0.12.0"
http = "0.1"
base64 = "0.13.0"
clap = "3.0.0-beta.5"
path-clean = "0.1.0"
